[metadata]
name = pyvmem
author = Mikhail Ushanov
author-email = gm.mephisto@gmail.com
summary = Violin Memory Flash Array 6000 API client
home-page = https://github.com/gmmephisto/pyvmem
license = GPLv3
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    vmem
    violin

[files]
packages =
    pyvmem

[wheel]
universal = 1
